# AntyCopyRightCppServer

./: .gitignore  CMakeLists.txt  Dockerfile  README.en.md  README.md  config.hpp.in
.github/workflows/: main.yml
src/: ConfigParser.cpp  RequestDTO.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  main.cpp  util.hpp
src/Auth/: GoogleOAuthClient.cpp  GoogleOAuthClient.hpp  GoogleTokenManager.cpp  GoogleTokenManager.hpp
src/Database/: Database.cpp  Databse.hpp
src/DocumentReader/: DocReader.cpp  DocReader.hpp  DocStyles.cpp  DocStyles.hpp  Paragraph.hpp  PdfDocumentFromMemory.cpp  PdfDocumentFromMemory.hpp  Walker.cpp  Walker.hpp
src/Models/: Document.hpp
src/Models/auth/google/: googleAuth.hpp
src/Session/: DataBaseSession.cpp  DataBaseSession.hpp  Session.cpp  Session.hpp  SimpleSession.cpp  SimpleSession.hpp  SslSession.cpp  SslSession.hpp
src/Util/: ConfigParser.cpp  ConfigParser.hpp  Encrypt.cpp  Encrypt.hpp  NetworkHealper.cpp  NetworkHealper.hpp  TimeFunc.cpp  TimeFunc.hpp
test/: CMakeLists.txt
test/src/: DocParseTest.cpp  databaseTest.cpp  encrypt_test.cpp  network_util_test.cpp  test.cpp  time_test.cpp
